# image-tiler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  jest.config.js  main.js  package-lock.json  package.json  playwright.config.js  webpack.config.js
.claude/: settings.local.json
.github/workflows/: deploy.yml  static.yml  test.yml
src/: lib.rs
test-fixtures/: README.md  test-image-small.json
tests/: app.spec.js  canvas-manager.test.js  image-loader.test.js  setup.js  ui-integration.test.js  ui-selection.test.js  wasm-integration.test.js
www/: canvas-manager.js  image-loader.js  index.html  index.js  ui-controller.js
